--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -7,7 +7,7 @@ $white-color: #fff;
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #9773a6; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
