--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -20,9 +20,9 @@
 
   // If you want to set a background image on the hero section, uncomment these with your custom image
 
-  /* background: url("/src/assets/[your-image].png");
+  background: url("/src/assets/rollinghills.gif");
   background-position: center;
-  background-size: cover; */
+  background-size: cover;
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
@@ -33,6 +33,10 @@
     font-weight: 700;
     margin-bottom: 3.2rem;
     text-align: left;
+
+    :not(.text-color-main) {
+      text-shadow: -1px -1px #FFFFFF
+    }
 
     @include respond(tab-land) {
       font-size: 4rem;
