--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -25,7 +25,7 @@
     }
 
     &__text {
-      text-align: left;
+      text-align: right;
 
       @include respond(phone) {
         margin-bottom: 2.5rem !important;
@@ -59,6 +59,7 @@
       }
 
       & .thumbnail {
+        max-width: 500px;
         border: none;
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
         transition: all 0.2s ease-out;
