adding pyCOVID project, const. image size

--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -73,6 +73,11 @@
           box-shadow: none;
           margin-bottom: 3.2rem;
         }
+
+        img {
+          height: 275px;
+        }
+        
       }
     }
   }
