--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -16,9 +16,7 @@
   z-index: -1;
 
   // Set position sticky so the jumbotron stays fixed while you scroll.
-  // position: sticky;
-
-  // If you want to set a background image on the hero section, uncomment these with your custom image
+  position: sticky;
 
   background: url("/src/assets/rollinghills.gif");
   background-position: center;
