--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 // COLORS
-$primary-color: #02aab0;
+$primary-color: #095456;
 $secondary-color: #00cdac;
 
-$white-color: #fff;
+$white-color: #FAF9F6; // #fff;
 
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
